// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/List Basic List One 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiList-root MuiList-padding"
  >
    <div
      style={
        Object {
          "overflow": "visible",
          "width": 0,
        }
      }
    >
      <div
        style={
          Object {
            "height": 400,
            "overflow": "hidden",
            "position": "relative",
            "width": 0,
          }
        }
      >
        <div
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "bottom": 0,
              "left": 0,
              "marginBottom": 0,
              "marginRight": 0,
              "overflow": "scroll",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            aria-label="grid"
            aria-readonly={true}
            className="ReactVirtualized__Grid ReactVirtualized__List"
            onScroll={[Function]}
            role="grid"
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "boxSizing": "border-box",
                "direction": "ltr",
                "height": 400,
                "overflowX": false,
                "overflowY": false,
                "position": "relative",
                "width": 0,
                "willChange": "transform",
              }
            }
            tabIndex={0}
          />
        </div>
        <div
          style={
            Object {
              "borderRadius": 3,
              "bottom": 2,
              "display": "none",
              "height": 6,
              "left": 2,
              "opacity": 0,
              "position": "absolute",
              "right": 2,
              "transition": "opacity 200ms",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,.2)",
                "borderRadius": "inherit",
                "cursor": "pointer",
                "display": "block",
                "height": "100%",
                "position": "relative",
              }
            }
          />
        </div>
        <div
          style={
            Object {
              "borderRadius": 3,
              "bottom": 2,
              "display": "none",
              "opacity": 0,
              "position": "absolute",
              "right": 2,
              "top": 2,
              "transition": "opacity 200ms",
              "width": 6,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,.2)",
                "borderRadius": "inherit",
                "cursor": "pointer",
                "display": "block",
                "position": "relative",
                "width": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Table Basic 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiTable-root"
    role="table"
  >
    <div
      className="MuiTableHead-root Component-root-1"
      role="rowgroup"
    >
      <div
        className="MuiTableRow-root Component-root-2 MuiTableRow-head Component-head-5"
        role="row"
      >
        <div
          aria-sort={null}
          className="MuiTableCell-root InnerTableCell-root-7 MuiTableCell-head InnerTableCell-head-8"
          role="columnheader"
          scope="col"
        >
          Index
        </div>
        <div
          aria-sort={null}
          className="MuiTableCell-root InnerTableCell-root-7 MuiTableCell-head InnerTableCell-head-8"
          role="columnheader"
          scope="col"
        >
          Title
        </div>
        <div
          aria-sort={null}
          className="MuiTableCell-root InnerTableCell-root-7 MuiTableCell-head InnerTableCell-head-8"
          role="columnheader"
          scope="col"
        >
          Timestamp
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "overflow": "visible",
          "width": 0,
        }
      }
    >
      <div
        style={
          Object {
            "height": 400,
            "overflow": "hidden",
            "position": "relative",
            "width": 0,
          }
        }
      >
        <div
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "bottom": 0,
              "left": 0,
              "marginBottom": 0,
              "marginRight": 0,
              "overflow": "scroll",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            aria-label="grid"
            aria-readonly={true}
            className="ReactVirtualized__Grid ReactVirtualized__List InnerTableBody-root-19"
            onScroll={[Function]}
            role="grid"
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "boxSizing": "border-box",
                "direction": "ltr",
                "height": 400,
                "overflowX": false,
                "overflowY": false,
                "position": "relative",
                "width": 0,
                "willChange": "transform",
              }
            }
            tabIndex={0}
          />
        </div>
        <div
          style={
            Object {
              "borderRadius": 3,
              "bottom": 2,
              "display": "none",
              "height": 6,
              "left": 2,
              "opacity": 0,
              "position": "absolute",
              "right": 2,
              "transition": "opacity 200ms",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,.2)",
                "borderRadius": "inherit",
                "cursor": "pointer",
                "display": "block",
                "height": "100%",
                "position": "relative",
              }
            }
          />
        </div>
        <div
          style={
            Object {
              "borderRadius": 3,
              "bottom": 2,
              "display": "none",
              "opacity": 0,
              "position": "absolute",
              "right": 2,
              "top": 2,
              "transition": "opacity 200ms",
              "width": 6,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "rgba(0,0,0,.2)",
                "borderRadius": "inherit",
                "cursor": "pointer",
                "display": "block",
                "position": "relative",
                "width": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Table Order 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiTable-root"
    role="table"
  >
    <div
      className="MuiTableHead-root Component-root-20"
      role="rowgroup"
    >
      <div
        className="MuiTableRow-root Component-root-21 MuiTableRow-head Component-head-24"
        role="row"
      >
        <div
          aria-sort={null}
          className="MuiTableCell-root InnerTableCell-root-26 MuiTableCell-head InnerTableCell-head-27"
          role="columnheader"
          scope="col"
        >
          Index
        </div>
        <div
          aria-sort={null}
          className="MuiTableCell-root InnerTableCell-root-26 MuiTableCell-head InnerTableCell-head-27"
          role="columnheader"
          scope="col"
        >
          <span
            aria-describedby={null}
            aria-disabled={false}
            className="MuiButtonBase-root MuiTableSortLabel-root"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
            title="Title"
          >
            Title
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
        <div
          aria-sort={null}
          className="MuiTableCell-root InnerTableCell-root-26 MuiTableCell-head InnerTableCell-head-27"
          role="columnheader"
          scope="col"
        >
          <span
            aria-describedby={null}
            aria-disabled={false}
            className="MuiButtonBase-root MuiTableSortLabel-root"
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
            title="Timestamp"
          >
            Timestamp
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <span
    className="MuiTypography-root MuiTypography-caption"
    style={
      Object {
        "margin": 10,
      }
    }
  >
    - tip: use [shift + click] to sort by multiple fields
  </span>
  <p
    className="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom"
    style={
      Object {
        "margin": 10,
      }
    }
  >
    Result: 
    []
  </p>
</div>
`;

exports[`Storyshots Example/Table Search 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiTable-root"
    role="table"
  >
    <div
      className="MuiTableHead-root Component-root-38"
      role="rowgroup"
    >
      <div
        className="MuiTableRow-root Component-root-39 MuiTableRow-head Component-head-42"
        role="row"
      >
        <div
          aria-sort={null}
          className="MuiTableCell-root InnerTableCell-root-44 MuiTableCell-head InnerTableCell-head-45"
          role="columnheader"
          scope="col"
        >
          Index
        </div>
        <div
          aria-sort={null}
          className="MuiTableCell-root InnerTableCell-root-44 MuiTableCell-head InnerTableCell-head-45"
          role="columnheader"
          scope="col"
        >
          Title
        </div>
        <div
          aria-sort={null}
          className="MuiTableCell-root InnerTableCell-root-44 MuiTableCell-head InnerTableCell-head-45"
          role="columnheader"
          scope="col"
        >
          Timestamp
        </div>
      </div>
      <div
        className="MuiTableRow-root Component-root-39 MuiTableRow-head Component-head-42"
        role="row"
      >
        <div
          aria-sort={null}
          className="MuiTableCell-root InnerTableCell-root-44 MuiTableCell-head InnerTableCell-head-45"
          role="columnheader"
          scope="col"
        />
        <div
          aria-sort={null}
          className="MuiTableCell-root InnerTableCell-root-44 MuiTableCell-head InnerTableCell-head-45"
          role="columnheader"
          scope="col"
        >
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
            onClick={[Function]}
          >
            <input
              className="MuiInputBase-input MuiInput-input"
              name="name"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          aria-sort={null}
          className="MuiTableCell-root InnerTableCell-root-44 MuiTableCell-head InnerTableCell-head-45"
          role="columnheader"
          scope="col"
        >
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth"
            onClick={[Function]}
          >
            <input
              className="MuiInputBase-input MuiInput-input"
              name="email"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <p
    className="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom"
    style={
      Object {
        "margin": 10,
      }
    }
  >
    Result: 
    []
  </p>
</div>
`;
